<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_marginTop="16dp"
            android:id="@+id/tvDetailsTitle"
            android:minHeight="?attr/listPreferredItemHeight"
            android:textStyle="bold"
            android:layout_below="@id/ivDetailsMovieImage"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:padding="16dp"
            android:text="@string/details_movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    <View
        android:layout_below="@+id/tvDetailsTitle"
       style="@style/Divider"/>

        <TextView
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:minHeight="?attr/listPreferredItemHeightSmall"
            android:id="@+id/tvDetailsDate"
            android:layout_below="@+id/tvDetailsTitle"
            android:paddingLeft="16dp"
            android:paddingBottom="8dp"
            android:text="@string/details_movie_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    <TextView
            android:lineSpacingExtra="4dp"
            android:id="@+id/tvDetailsDesc"
            android:layout_below="@+id/tvDetailsDate"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:text="@string/loreum_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvDetailsRating"
            android:textColor="@color/colorAccent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignBaseline="@id/tvDetailsDate"
            android:layout_below="@+id/tvDetailsTitle"
            android:paddingRight="16dp"
            android:paddingBottom="8dp"
            android:text="@string/details_movie_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    <View
        android:layout_below="@+id/tvDetailsDesc"
        style="@style/Divider"/>

    <TextView
        android:gravity="center"
        android:minHeight="?attr/listPreferredItemHeightSmall"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
        android:id="@+id/tvDetailsTrailer"
        android:paddingLeft="16dp"
        android:paddingBottom="8dp"
        android:text="@string/details_trailer_title"
        android:layout_below="@+id/tvDetailsDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:background="@drawable/touch_selector"
        android:id="@+id/llDetailsTrailer1"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_below="@+id/tvDetailsTrailer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:padding="8dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/play_icon"
            android:layout_width="70dp"
            android:layout_height="70dp" />

        <TextView
            android:id="@+id/tvDetailsTrailer720"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:text="@string/details_movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:background="@drawable/touch_selector"
        android:id="@+id/llDetailsTrailer2"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_below="@+id/llDetailsTrailer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:padding="8dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/play_icon"
            android:layout_width="70dp"
            android:layout_height="70dp" />

        <TextView
            android:id="@+id/tvDetailsTrailer1080"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:text="@string/details_movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <View
        android:layout_below="@+id/llDetailsTrailer2"
        style="@style/Divider"/>

    <android.support.v7.widget.AppCompatButton
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/button_show_reviews"
        android:layout_below="@+id/llDetailsTrailer2"
        android:id="@+id/btDetailsShowReviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:layout_below="@+id/btDetailsShowReviews"
        android:id="@+id/flReviewContent"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:padding="16dp"
            android:id="@+id/rvDetails"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"
            android:indeterminateDrawable="@drawable/circular_progress_bar"/> >

    </FrameLayout>

    </RelativeLayout>

</ScrollView>